objects/zkups__UPSSEDForm__c.object
<CustomObject>
    <customHelpPage>zkups__internationalShipmentHelp</customHelpPage>
    <description>UPS EEI Form is a collection of data defined for generating a Electronic Export Information</description>
    <fields>
        <fullName>zkups__ACMNumber__c</fullName>
        <description>Approved Community Member Number (ACM)</description>
        <inlineHelpText>Approved Community Member Number (ACM)</inlineHelpText>
        <label>ACM Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ECCNNumber__c</fullName>
        <description>Product ECCN Number issued by BIS (Bureau of Industry and Security). The format is #A### or EAR99</description>
        <inlineHelpText>Product ECCN Number issued by BIS (Bureau of Industry and Security). The format is #A### or EAR99</inlineHelpText>
        <label>ECCN Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__EEIEmailAddress__c</fullName>
        <description>Email Address where the notification is sent</description>
        <inlineHelpText>Email Address where the notification is sent</inlineHelpText>
        <label>EEI Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkups__EEIFillingType__c</fullName>
        <label>EEI Filling Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shipper filed</fullName>
                </value>
                <value>
                    <fullName>UPS filed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__EEIShipper__c</fullName>
        <description>Indicates the EEI Shipper sub option</description>
        <inlineHelpText>Indicates the EEI Shipper sub option</inlineHelpText>
        <label>EEI Shipper</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>zkups__EEIFillingType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Requires the ITN</fullName>
                </value>
                <value>
                    <fullName>Requires the Exemption Legend</fullName>
                </value>
                <value>
                    <fullName>Requires the post departure filing citation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__EEIUPSFiledPOA__c</fullName>
        <label>EEI UPS Filed POA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time POA</fullName>
                </value>
                <value>
                    <fullName>Blanket POA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__EligibleParty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presence/Absent indicator. Certification by the U.S. exporter that the exporter is an eligible party to participate in the defense trade</description>
        <inlineHelpText>Presence/Absent indicator. Certification by the U.S. exporter that the exporter is an eligible party to participate in the defense trade</inlineHelpText>
        <label>Eligible Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__EntryNumber__c</fullName>
        <description>The Import Entry Number when the export transaction is used as proof of export for import transactions (examples: In Bond, Temporary Import Bond or Drawbacks)

Conditionally Required for SED forms when In Bond Code value is other than 70 (&quot;Not In Bond&quot;)</description>
        <inlineHelpText>The Import Entry Number when the export transaction is used as proof of export for import transactions (examples: In Bond, Temporary Import Bond or Drawbacks)

Conditionally Required for SED forms when In Bond Code value is other than 70 (&quot;Not In Bond&quot;)</inlineHelpText>
        <label>Entry Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ExemptionLegend__c</fullName>
        <label>Exemption Legend</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>zkups__EEIFillingType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>30.2(d)(2)</fullName>
                </value>
                <value>
                    <fullName>30.26(a)</fullName>
                </value>
                <value>
                    <fullName>30.36</fullName>
                </value>
                <value>
                    <fullName>30.37(a)</fullName>
                </value>
                <value>
                    <fullName>30.37(b)</fullName>
                </value>
                <value>
                    <fullName>30.37(c)</fullName>
                </value>
                <value>
                    <fullName>30.37(d)</fullName>
                </value>
                <value>
                    <fullName>30.37(f)</fullName>
                </value>
                <value>
                    <fullName>30.37(h)</fullName>
                </value>
                <value>
                    <fullName>30.37(i)</fullName>
                </value>
                <value>
                    <fullName>30.37(j)</fullName>
                </value>
                <value>
                    <fullName>30.37(k)</fullName>
                </value>
                <value>
                    <fullName>30.37(l)</fullName>
                </value>
                <value>
                    <fullName>30.37(m)</fullName>
                </value>
                <value>
                    <fullName>30.37(n)</fullName>
                </value>
                <value>
                    <fullName>30.37(o)</fullName>
                </value>
                <value>
                    <fullName>30.37(p)</fullName>
                </value>
                <value>
                    <fullName>30.37(q)</fullName>
                </value>
                <value>
                    <fullName>30.37(r)</fullName>
                </value>
                <value>
                    <fullName>30.37(s)</fullName>
                </value>
                <value>
                    <fullName>30.37(t)</fullName>
                </value>
                <value>
                    <fullName>30.37(u)</fullName>
                </value>
                <value>
                    <fullName>30.37(x)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(1)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(2)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(3)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(4)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(5)</fullName>
                </value>
                <value>
                    <fullName>30.37(y)(6)</fullName>
                </value>
                <value>
                    <fullName>30.39</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__ExportInformation__c</fullName>
        <description>Required for EEI form id it is a SDL product. Valid values: LC, LV, SS,MS, GS, DP, HR, UG, IC, SC, DD, HH, SR, TE,TL, IS, CR, GP, RJ, TP, IP, IR, DB, CH, RS, OS</description>
        <inlineHelpText>Required for EEI form id it is a SDL product. Valid values: LC, LV, SS,MS, GS, DP, HR, UG, IC, SC, DD, HH, SR, TE,TL, IS, CR, GP, RJ, TP, IP, IR, DB, CH, RS, OS</inlineHelpText>
        <label>Export Information</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentCity__c</fullName>
        <label>Forwarding Agent City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentCompanyName__c</fullName>
        <label>Forwarding Agent Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentCountryCode__c</fullName>
        <label>Forwarding Agent Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentEinIrsNo__c</fullName>
        <label>Forwarding Agent&apos;s EIN (IRS) NO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentPostalCode__c</fullName>
        <label>Forwarding Agent Postal Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentStateProvince__c</fullName>
        <label>Forwarding Agent State/Province</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ForwardingAgentStreet__c</fullName>
        <label>Forwarding Agent Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ITARExemptionNumber__c</fullName>
        <label>ITAR Exemption Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__InBondCode__c</fullName>
        <description>70: Not in bond
36: Warehouse withdrawal for IE
37: Warehouse withdrawal for T and E
62: T and E
63: IE
67: IE from a FTZ
68: T and E from a FTZ</description>
        <inlineHelpText>70: Not in bond
36: Warehouse withdrawal for IE
37: Warehouse withdrawal for T and E
62: T and E
63: IE
67: IE from a FTZ
68: T and E from a FTZ</inlineHelpText>
        <label>In Bond Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>37</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>67</fullName>
                </value>
                <value>
                    <fullName>68</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__LicenseCode__c</fullName>
        <description>The standard license code published by US government (from C30 to C60)</description>
        <inlineHelpText>The standard license code published by US government (from C30 to C60)</inlineHelpText>
        <label>License Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LicenseDate__c</fullName>
        <label>License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkups__LicenseLineValue__c</fullName>
        <description>The export monetary amount allowed per license. Required for a licensable product when the EEI form is selected</description>
        <inlineHelpText>The export monetary amount allowed per license. Required for a licensable product when the EEI form is selected</inlineHelpText>
        <label>License Line Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LicenseNumber__c</fullName>
        <label>License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__LoadingPier__c</fullName>
        <label>Loading Pier</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ModeOfTransport__c</fullName>
        <label>Mode of Transport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Air Containerized</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Fixed Transport Installations</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Passenger Handcarried</fullName>
                </value>
                <value>
                    <fullName>Pedestrian</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Rail Containerized</fullName>
                </value>
                <value>
                    <fullName>Road Other</fullName>
                </value>
                <value>
                    <fullName>Sea Barge</fullName>
                </value>
                <value>
                    <fullName>Sea Containerized</fullName>
                </value>
                <value>
                    <fullName>Sea Non-containerized</fullName>
                </value>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>Truck Containerized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__PointOfOrigin__c</fullName>
        <description>Contains either the two-digit U.S. Postal Service abbreviation for the state from which the goods were shipped (user PR for Puerto Rico), or the Foreign Trade Zone number of the zone from where the exports are leaving.</description>
        <inlineHelpText>Contains either the two-digit U.S. Postal Service abbreviation for the state from which the goods were shipped (user PR for Puerto Rico), or the Foreign Trade Zone number of the zone from where the exports are leaving.</inlineHelpText>
        <label>Point of Origin</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PortOfExport__c</fullName>
        <label>Port of Export</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PortOfUnloading__c</fullName>
        <label>Port of Unloading</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__PreDepartureITNNumber__c</fullName>
        <description>The format is available from AESDirect website</description>
        <inlineHelpText>The format is available from AESDirect website</inlineHelpText>
        <label>Pre Departure ITN Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__RegistrationNumber__c</fullName>
        <description>It is a unique registration code assigned to the registrant. The DDTC registration code consist of a letter prefix, M (assigned to a manufacturer and/or exporter) or K (assigned to a broker), followed by four or five digits (e.g. K-1234 or M12345)</description>
        <inlineHelpText>It is a unique registration code assigned to the registrant. The DDTC registration code consist of a letter prefix, M (assigned to a manufacturer and/or exporter) or K (assigned to a broker), followed by four or five digits (e.g. K-1234 or M12345)</inlineHelpText>
        <label>Registration Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__ShipperTaxId__c</fullName>
        <description>The Company Tax ID of the Shipper.</description>
        <inlineHelpText>The Company Tax ID of the Shipper.</inlineHelpText>
        <label>Shipper Tax ID</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkups__SignificantMilitaryEquipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Significant Military Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__USMLCategoryCode__c</fullName>
        <description>Digit numeric code (e.g. 01-18, 20 or 21). Indicates the U.S. Munitions List (USML) category article, service or related technical data as it applies to the article reported.</description>
        <inlineHelpText>Digit numeric code (e.g. 01-18, 20 or 21). Indicates the U.S. Munitions List (USML) category article, service or related technical data as it applies to the article reported.</inlineHelpText>
        <label>USML Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeCity__c</fullName>
        <label>Ultimate Consignee City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeCompanyName__c</fullName>
        <label>Ultimate Consignee Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeCountryCode__c</fullName>
        <label>Ultimate Consignee Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneePostalCode__c</fullName>
        <label>Ultimate Consignee Postal Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeStateProvince__c</fullName>
        <label>Ultimate Consignee State/Province</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeStreet__c</fullName>
        <description>Up to 3 lines maximum. Each line must be no more than 35 characters long.</description>
        <inlineHelpText>Up to 3 lines maximum. Each line must be no more than 35 characters long.</inlineHelpText>
        <label>Ultimate Consignee Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkups__UltimateConsigneeType__c</fullName>
        <label>Ultimate Consignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>zkups__EEIFillingType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Consumer</fullName>
                </value>
                <value>
                    <fullName>Government Entity</fullName>
                </value>
                <value>
                    <fullName>Resellr</fullName>
                </value>
                <value>
                    <fullName>Other/Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkups__isSDLShipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment is SDL</label>
        <type>Checkbox</type>
    </fields>
    <label>UPS EEI Form</label>
    <nameField>
        <displayFormat>UPS-EEI-{0000}</displayFormat>
        <label>UPS EEI Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPS EEI Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zkups__CheckUltimate_Consignee_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(zkups__EEIFillingType__c)=&apos;Shipper filed&apos;,TEXT(zkups__UltimateConsigneeType__c) = null)</errorConditionFormula>
        <errorDisplayField>zkups__UltimateConsigneeType__c</errorDisplayField>
        <errorMessage>Please select option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zkups__Requires_the_Exemption_Legend_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(zkups__EEIShipper__c)=&apos;Requires the Exemption Legend&apos;,TEXT(zkups__ExemptionLegend__c)=null)</errorConditionFormula>
        <errorDisplayField>zkups__ExemptionLegend__c</errorDisplayField>
        <errorMessage>Please select option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zkups__Requires_the_ITN_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(zkups__EEIShipper__c)=&apos;Requires the ITN&apos;,zkups__PreDepartureITNNumber__c=null)</errorConditionFormula>
        <errorDisplayField>zkups__PreDepartureITNNumber__c</errorDisplayField>
        <errorMessage>Please fill field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zkups__Shipper_filed_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(zkups__EEIFillingType__c)=&apos;Shipper filed&apos;,TEXT(zkups__EEIShipper__c)=null)</errorConditionFormula>
        <errorDisplayField>zkups__EEIShipper__c</errorDisplayField>
        <errorMessage>Please choose option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>zkups__UPS_filed_check</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(zkups__EEIFillingType__c)=&apos;UPS filed&apos;</errorConditionFormula>
        <errorDisplayField>zkups__EEIFillingType__c</errorDisplayField>
        <errorMessage>&apos;UPS filled&apos; option is not supported.</errorMessage>
    </validationRules>
</CustomObject>